Update the README file

--- a/sample.env
+++ b/sample.env
@@ -13,4 +13,6 @@ DB_URL=postgres://username:password@localhost:5432/demo-db
 POSTGRES_DB=${APP_NAME}-db
 POSTGRES_USERNAME=username
 POSTGRES_PASSWORD=password
+
+# I need to remove this and test with UN & PW
 POSTGRES_HOST_AUTH_METHOD=trust
