Fixing vars for DB

--- a/sample.env
+++ b/sample.env
@@ -9,10 +9,7 @@ RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 ## DB ##
-DB_URL=postgres://username:password@localhost:5432/demo-db
-POSTGRES_DB=${APP_NAME}-db
-POSTGRES_USERNAME=username
-POSTGRES_PASSWORD=password
-
-# I need to remove this and test with UN & PW
-POSTGRES_HOST_AUTH_METHOD=trust
+PGDATABASE=${APP_NAME}-db
+PGUSER=username
+PGPASSWORD=password
+PGDB_URL=postgres://${PGUSER}:${PGPASSWORD}@localhost:5432/${APP_NAME}-db
