--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       - .env
     environment:
       RAILS_ENV: ${RAILS_ENV}
-      DATABASE_NAME: ${POSTGRES_DB}
-      DATABASE_USERNAME: ${POSTGRES_USERNAME}
-      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
-      DB_URL: ${DB_URL}
+      DATABASE_NAME: ${PGDATABASE}
+      DATABASE_USERNAME: ${PGUSER}
+      DATABASE_PASSWORD: ${PGPASSWORD}
+      DB_URL: ${PGDB_URL}
     ports:
       - "3000:3000"
     networks:
@@ -32,10 +32,6 @@ services:
     image: postgres:latest
     env_file:
       - .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USERNAME}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - ./db/postgresql/pgdata:/var/lib/postgresql/data
     ports:
