--- a/sample.env
+++ b/sample.env
@@ -9,7 +9,9 @@ RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 ## DB ##
-PGDATABASE=${APP_NAME}-db
-PGUSER=username
-PGPASSWORD=password
-PGDB_URL=postgres://${PGUSER}:${PGPASSWORD}@localhost:5432/${APP_NAME}-db
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+POSTGRES_DB=demo-db
+POSTGRES_PORT=5432
+
+PGDB_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
