--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 # Ignore rails APP dir structure & DB data dir
-/app
+/rails-app
 /db
 
-# Ignore bundler config.
+# Ignore bundler config
 /.bundle
 
-# Ignore all environment files.
+# Ignore all environment files
 /.env*
 
-# Ignore all logfiles and tempfiles.
+# Ignore all logfiles and tempfiles
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+
+# OS files
+.DS_Store*
