--- a/sample.env
+++ b/sample.env
@@ -12,9 +12,8 @@ RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 ## DB ##
-POSTGRES_USER=username
+POSTGRES_USER=${APP_NAME}-user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=demo-db
-POSTGRES_PORT=5432
+POSTGRES_DB=${APP_NAME}-db
 
 PGDB_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
